--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -1,7 +1,15 @@
 <div class="side-wrapper active">
   <aside class="aside-bar" id="sidebar-content">
     <div class="list-group aside-menu">
-      <a class="list-group-item" href="#">My Account</a>
+      <a class="list-group-item" href="#ma-menu" data-toggle="collapse">My Account</a>
+      <ul class="aside-bar-submenu nav collapse" id="ma-menu">
+       <li>
+         <a href="#">Hello</a>
+       </li>
+       <li>
+         <a href="#">Bello</a>
+       </li>
+      </ul>
       <a class="list-group-item active" href="#">New Booking</a>
       <a class="list-group-item" href="#">Active Booking</a>
       <a class="list-group-item" href="#">Booking on Hold</a>
