--- a/app/views/freights/new.html.erb
+++ b/app/views/freights/new.html.erb
@@ -22,11 +22,11 @@
                         <div class="row form-group">
                           <div class="col-md-6">
                             <div class="col-md-3">From</div>
-                            <div class="col-md-6"><%= country_select( "freight", "source", {}, { class: 'form-control selecter'}) %></div>
+                            <div class="col-md-6"><%= country_select( "freight", "source", {}, { class: 'form-control selecter', required: 'required'}) %></div>
                           </div>
                           <div class="col-xs-6">
                             <div class="col-md-3">To</div>
-                            <div class="col-md-6"><%= country_select( "freight", "destination", {}, { class: 'form-control selecter'}) %></div>
+                            <div class="col-md-6"><%= country_select( "freight", "destination", {}, { class: 'form-control selecter',required: 'required'}) %></div>
                           </div>
 
                         </div>
@@ -35,11 +35,11 @@
                         <div class="row form-group">
                           <div class="col-md-6">
                             <div class="col-md-3">Wt. From</div>
-                            <div class="col-md-6"> <%= f.text_field "min_weight", class: "form-control", id: "hm-weight", placeholder: "Wt. From" %></div>
+                            <div class="col-md-6"> <%= f.text_field "min_weight", class: "form-control", id: "hm-weight", placeholder: "Wt. From", required: 'required' %></div>
                           </div>
                           <div class="col-md-6">
                             <div class="col-md-3">Wt.To</div>
-                            <div class="col-md-6"> <%= f.text_field "max_weight", class: "form-control", id: "hm-weight", placeholder: "Wt-To" %></div>
+                            <div class="col-md-6"> <%= f.text_field "max_weight", class: "form-control", id: "hm-weight", placeholder: "Wt-To", required: 'required' %></div>
                           </div>
                         </div>
 
@@ -48,7 +48,7 @@
                             <div class="col-xs-6">
                               <div class="col-md-3">Date From</div>
                               <div class="col-md-6 input-group date">
-                                <%= f.text_field "start_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd" %>
+                                <%= f.text_field "start_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', data: { provide: "datepicker"}, 'data-date-format'=> "yyyy/mm/dd" %>
                                 <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -57,7 +57,7 @@
                             <div class="col-xs-6">
                               <div class="col-md-3">Date To</div>
                               <div class="col-md-6 input-group date">
-                                <%= f.text_field "end_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd" %>
+                                <%= f.text_field "end_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', data: { provide: "datepicker"}, 'data-date-format'=> "yyyy/mm/dd" %>
                                 <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -71,25 +71,25 @@
                         <div class="row form-group">
                           <div class="col-xs-6">
                             <div class="col-md-3">CBM</div>
-                            <div class="col-md-6"> <%= f.text_field "cbm", class: "form-control", id: "hm-weight", placeholder: "CBM" %></div>
+                            <div class="col-md-6"> <%= f.text_field "cbm", class: "form-control", id: "hm-weight", placeholder: "CBM", required: 'required' %></div>
                           </div>
 
                           <div class="col-md-6">
                             <div class="col-md-3">Price</div>
-                            <div class="col-md-6"> <%= f.text_field "price", class: "form-control", id: "hm-weight", placeholder: "Price" %></div>
+                            <div class="col-md-6"> <%= f.text_field "price", class: "form-control", id: "hm-weight", placeholder: "Price", required: 'required' %></div>
                           </div>
                         </div>
 
                         <div class="row form-group">
                           <div class="col-xs-6">
                             <div class="col-md-3">Delivery Days</div>
-                            <div class="col-md-6"> <%= f.text_field "transition_days", class: "form-control", id: "hm-weight", placeholder: "delivery_days" %></div>
+                            <div class="col-md-6"> <%= f.text_field "transition_days", class: "form-control", id: "hm-weight", placeholder: "delivery_days", required: 'required' %></div>
                           </div>
 
                           <div class="col-xs-6">
                             <div class="col-md-3">Cut Off Date</div>
                             <div class="col-md-6 input-group date">
-                              <%= f.text_field "cut_off_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd" %>
+                              <%= f.text_field "cut_off_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', data: { provide: "datepicker"}, 'data-date-format'=> "yyyy/mm/dd" %>
                               <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -100,7 +100,7 @@
                         <div class="row form-group">
                           <div class="col-xs-6">
                             <div class="col-md-3">freight_type</div>
-                            <div class="col-md-6"> <%= f.select "freight_type", ['sea', 'air'],{}, {class: "form-control selecter", id: "hm-weight"} %></div>
+                            <div class="col-md-6"> <%= f.select "freight_type", ['sea', 'air'],{}, {class: "form-control selecter", id: "hm-weight", required: 'required'} %></div>
                           </div>
                         </div>
 
