--- a/app/views/layouts/_seller_side_bar.html.erb
+++ b/app/views/layouts/_seller_side_bar.html.erb
@@ -1,8 +1,21 @@
 <div class="side-wrapper active">
   <aside class="aside-bar" id="sidebar-content">
     <div class="list-group aside-menu">
-      <a class="list-group-item" href="#" >My Account</a>
-      
+      <a class="list-group-item" href="#account-menu" data-toggle="collapse">My Account</a>
+        <ul class="aside-bar-submenu nav collapse" id="account-menu">
+         <li>
+           <a href="#">Notification</a>
+         </li>
+         <li>
+           <a href="#">Registered Buyers</a>
+         </li>
+         <li>
+           <a href="#">Setting</a>
+         </li>
+         <li>
+           <a href="#">Update Freight Data</a>
+         </li>
+        </ul>
       <a class="list-group-item active" href="#b-menu" data-toggle="collapse">Booking</a>
       <ul class="aside-bar-submenu nav collapse" id="b-menu">
        <li>
