added links to side bar

--- a/app/views/layouts/_seller_side_bar.html.erb
+++ b/app/views/layouts/_seller_side_bar.html.erb
@@ -10,10 +10,10 @@
            <a href="#">Registered Buyers</a>
          </li>
          <li>
-           <a href="#">Setting</a>
+           <a href="/myaccount">Setting</a>
          </li>
          <li>
-           <a href="#">Update Freight Data</a>
+           <a href="/freights">Update Freight Data</a>
          </li>
         </ul>
       <a class="list-group-item active" href="#b-menu" data-toggle="collapse">Booking</a>
