--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -44,6 +44,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 
 .container {width: 1170px !important;}
 .right-body {padding-top: 20px;}
+.page-overlay {background: rgba(0,0,0,0.7);position: fixed;left: 0;top: 0;width: 100%;height: 100%;z-index: 1100;display: none;}
 
 .btn-ghost {border:1px solid;background: transparent;}
 .btn-ghost:hover {background: #fff;background: rgba(255,255,255,0.7);}
@@ -60,13 +61,13 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .aside-toggle.animate .move-bars>span:nth-child(3) {transform:rotate(-45deg);transform-origin: center;transition:all 0.2s ease-in-out;}
 
 
-.header-nav {background: #fff;border-bottom: 1px solid #19B5FE;min-width: 1170px;}
+.header-nav {background: #fff;border-bottom: 1px solid #19B5FE;min-width: 1170px;z-index: 1300}
 .header-nav .navbar-brand {color: #19B5FE;font-family: 'open_sanslight';text-transform: uppercase;}
 .header-nav * a {color: #19B5FE}
 .header-nav .no-btn {color: #fff;font-size: 16px;}
 
 .header-links>li {display: inline-block;float: left;}
-.aside-bar {width: 210px;height: 100%;position: fixed;left: 0;top: 0;padding-top: 60px;transition:all 0.3s ease-in-out;z-index: 1001;background: #fff;}
+.aside-bar {width: 210px;height: 100%;position: fixed;left: 0;top: 0;padding-top: 60px;transition:all 0.3s ease-in-out;z-index: 1200;background: #fff;}
 
 .side-wrapper.active .aside-bar {left: -210px;}
 
@@ -88,8 +89,8 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 
 
 .search-item {position: relative;}
-.flow-remove {position: absolute;right: 0;margin-right: -20px;top: 0;}
-.flow-remove>.btn {border-radius: 50%;padding: 4px 9px;}
+.flow-remove {position: absolute;right: 8px;margin-right: -20px;top: 5px;}
+.flow-remove>.btn {border-radius: 50%;width: 20px;height: 20px;padding: 0;margin: 0;font-size: 12px;text-indent: 1px;}
 
 .search-list .search-item:first-child .flow-remove {display: none;}
 
@@ -119,14 +120,17 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 
 .frmto-drpdn {width: 180px;margin-top: 20px;}
 .frmto-drpdn>.btn {width: 100%;padding: 4px;border-radius: 0;}
-.frmto-menu {background:transparent;color: #fff;padding: 0 !important;min-width: 200px;}
-.frmto-menu>.loc-item>.loc-item-in {padding:8px 10px;font-size: 12px;font-family: 'open_sanslight';color: #000 !important;background: #fefefe;cursor: pointer;display: block;width: 100%;float: left;position: relative;border-bottom: 1px solid #ddd;}
-.loc-item:hover .loc-item-in {background: #d8f2fe}
-.loc-item-in>.loc-item-link {position: absolute;top: 0;left: 0;right: 0;bottom: 0;padding: 0;height: 0;width: 0;}
-.frmto-drpdn .frmto-count {float: right;margin-right: 10px;}
-.loc-item .loc-pos {width: 80px;display: inline-block;float: left;color: #000}
-.loc-item-in>.btn-del {border-radius: 50%;width: 20px;height: 20px;padding: 0;right: 5px;top: 5px;position: absolute;}
-.loc-item-in>.btn-del:hover {background: #ed5565}
+.frmto-menu {background:transparent;color: #fff;padding: 0 !important;min-width: 220px;}
+.frmto-menu>.loc-item {display: block;width: 100%;background: #fff !important;height: 36px;border-bottom: 1px solid #ddd}
+.frmto-menu>.loc-item>.loc-item-in:hover {background: #d8f2fe}
+.frmto-menu>.loc-item a:hover {background: transparent;color: #000}
+
+.loc-item>.loc-item-in {display: block;width: 100%;position: relative;padding: 0;height: inherit;}
+.loc-item-in>.loc-item-link {left: 0;top: 0;position: absolute;padding: 0;width: 195px;height: inherit;padding: 5px;}
+.loc-item-link .loc-pos {width: 50%;float: left;color: #000;line-height: 24px;padding: 0 5px;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
+.loc-item-in a:hover {background: #fff;color: #000}
+.loc-item-in>.btn-del {right: 5px;top: 7px;position: absolute;border-radius: 50%;width: 20px;height: 20px;padding: 0;}
+.loc-item-in>.btn-del:hover {background: #ed5565;}
 
 
 .order-sort>li {margin-bottom: 4px}
@@ -141,7 +145,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .rlist-headings {width: 100%;padding: 10px;margin: 0 0 15px;overflow: hidden;background: #CCD1D9;list-style-type: none;border:1px solid #c6c6c6;}
 .rlist-headings>li {width: auto;display: inline-block;float: left;color: #000;padding: 0 5px;text-align: center;}
 .rlist-headings>li+li {border-left: 1px solid #AAB2BD;}
-.result-item {width: 100%;margin: 0;padding: 10px;display: table;overflow: hidden;list-style-type: none;border:1px solid #c6c6c6;background: #fff;margin: 5px 0;box-shadow:0 1px 2px rgba(0,0,0,.2);-webkit-box-shadow:0 1px 2px rgba(0,0,0,.2);-moz-box-shadow:0 1px 2px rgba(0,0,0,.2);}
+.result-item {width: 100%;margin: 0;padding:6px 10px;display: table;overflow: hidden;list-style-type: none;border:1px solid #c6c6c6;background: #fff;margin: 5px 0;box-shadow:0 1px 2px rgba(0,0,0,.2);-webkit-box-shadow:0 1px 2px rgba(0,0,0,.2);-moz-box-shadow:0 1px 2px rgba(0,0,0,.2);}
 .result-item>.rb-item {display: table-cell;width: auto;padding: 0 5px;vertical-align: middle;}
 
 .rb-item + .rb-item {border-left: 1px solid #eee}
@@ -161,8 +165,8 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .slctd-sr-list>.slctd-sr-item>li {display: inline-block;font-size: 12px;}
 .slctd-sr-item .ssri-item-l {width: 80px;text-transform: uppercase;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
 .slctd-sr-item .ssri-item-l:before {content: '\f041';font-family: 'fontawesome';padding-right: 4px;color: #ccc}
-.slctd-sr-item>li.ssri-item-p {position: absolute;left: 55%;font-size: 24px;font-family: 'open_sansbold';}
-.slctd-sr-item>.ssri-item-d {position: absolute;right: 10px;bottom: 6px;}
+.slctd-sr-item>li.ssri-item-p {position: absolute;right: 8px;font-size: 20px;font-family: 'open_sansregular';top: 0;text-align: right;width: 55%;overflow: hidden;}
+.slctd-sr-item>.ssri-item-d {position: absolute;right: 8px;bottom: 5px;}
 
 .rview-rating {text-align: left;}
 .rview-rating-c {text-align: right;color: #ccc;font-size: 12px;}
@@ -188,6 +192,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .selecter .selecter-selected {border-radius: 0;border-color: #96deff;height: 32px;}
 
 /*************** =bootstrap ****************/
+.clean-modal {z-index: 1300}
 .clean-modal .modal-dialog {margin-top: 120px;}
 .clean-modal .round-close {background: #19B5FE;width: 30px;height: 30px;border-radius: 50%;color: #fff;text-shadow:none;opacity: 1;margin-top: -14px;margin-right: -14px;}
 
