--- a/app/views/bookings/get_quote.html.erb
+++ b/app/views/bookings/get_quote.html.erb
@@ -10,10 +10,10 @@
                 <li class="loc-item">
                   <div class="loc-item-in">
                     <%= link_to get_quote_booking_path(id: booking.id), class: 'loc-item-link' do %>
-                      <div class="loc-pos"><%= booking.source%></div>
-                      <div class="loc-pos"><%= booking.destination%></div>
+                      <span class="loc-pos"><%= booking.source%></span>
+                      <span class="loc-pos"><%= booking.destination%></span>
                     <%end%>
-                    <a class="btn btn-danger btn-del" href="#">&times;</a>
+                    <button class="btn btn-danger btn-del" type="button">&times;</button>
                   </div>    
                 </li>
               <%end%>  
@@ -91,36 +91,51 @@
   <div class="result-content">
     <div class="row">
       <div class="col-xs-9 col-xs-offset-1">
-        <div class="rlist-wrapper">
-          <ul class="rlist-headings">
-            <li>&nbsp;</li>
-            <li>Ratings</li>
-            <li>Cut Offs</li>
-            <li>Delivery</li>
-            <li>Days</li>
-            <li>All - in Price</li>
-            <li>&nbsp;</li>
-          </ul>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="rlist-wrapper">
+              <ul class="rlist-headings">
+                <li>&nbsp;</li>
+                <li>Ratings</li>
+                <li>Cut Offs</li>
+                <li>Delivery</li>
+                <li>Days</li>
+                <li>All - in Price</li>
+                <li>&nbsp;</li>
+              </ul>
 
-          <% @freight_rates.each do |freight_rate|%>
-            <div class="result-item">
-              <div class="rb-item rb-name"><%=image_tag 'dhl.png'%></div>
-              <div class="rb-item rb-rating">
-                <span class="rview-rating"></span> <span class="rview-rating-c">(10)</span>
-              </div>              
-              <div class="rb-item rb-coff"><%= freight_rate.cut_off_date.strftime("%-d, %b")%></div>
-              <div class="rb-item rb-del"><%= delivery_date(freight_rate).strftime("%-d, %b")%></div>
-              <div class="rb-item rb-day"><%= freight_rate.transition_days%></div>
-              <div class="rb-item rb-aip">US $<%= freight_rate.price %></div>
-              <div class="rb-item rb-buk">
-                <button style="display: <%= is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn btn-success selected" id = "selected_freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="remove_from_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Selected</button>
+              <% @freight_rates.each do |freight_rate|%>
+                <div class="result-item">
+                  <div class="rb-item rb-name"><%=image_tag 'dhl.png'%></div>
+                  <div class="rb-item rb-rating">
+                    <span class="rview-rating"></span> <span class="rview-rating-c">(10)</span>
+                  </div>              
+                  <div class="rb-item rb-coff"><%= freight_rate.cut_off_date.strftime("%-d, %b")%></div>
+                  <div class="rb-item rb-del"><%= delivery_date(freight_rate).strftime("%-d, %b")%></div>
+                  <div class="rb-item rb-day"><%= freight_rate.transition_days%></div>
+                  <div class="rb-item rb-aip">US $<%= freight_rate.price %></div>
+                  <div class="rb-item rb-buk">
+                    <button style="display: <%= is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn btn-success selected" id = "selected_freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="remove_from_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Selected</button>
 
-                <button style="display: <%= !is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn btn-success select" id = "freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="add_to_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Select</button>
-              </div>
-            </div>
-          <%end%>
+                    <button style="display: <%= !is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn btn-success select" id = "freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="add_to_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Select</button>
+                  </div>
+                </div>
+              <%end%>
+            </div>  
+          </div>
         </div>
-      </div>
+        <div class="row">
+          <div class="col-xs-8 col-xs-offset-2">
+            <div class="form-group text-center">
+              <%= link_to 'Book Now', add_supplier_consignee_address_books_path, class: "btn btn-primary"%>
+              <%= link_to booking_summary_bookings_path, class: "btn btn-default pull-right" do %>
+                View Summary
+                <i class="fa fa-angle-double-right"></i>  
+              <% end %>
+            </div>
+          </div>
+        </div>  
+      </div>  
       <div class="col-xs-2">
         <div class="slctd-sr-list cart_detail">
           <%= render :partial => 'bookings/cart_details'%> 
@@ -166,17 +181,6 @@
          </ul>
         </div>
 
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-8 col-xs-offset-2">
-        <div class="form-group text-center">
-          <button type="button" class="btn btn-primary">Book Now</button>
-          <%= link_to booking_summary_bookings_path, class: "btn btn-default pull-right" do %>
-            View Summary
-            <i class="fa fa-angle-double-right"></i>  
-          <% end %>
-        </div>
       </div>
     </div>
   </div>
