--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -5,3 +5,10 @@
 <%= javascript_include_tag 'application'%>
 <%= csrf_meta_tags %>
 <%= yield :head %>
+
+
+<script type="text/javascript">
+ $(document).ready(function(){
+   call_selec();
+ });
+</script>
