--- a/app/views/bookings/draft_bookings.html.erb
+++ b/app/views/bookings/draft_bookings.html.erb
@@ -1,7 +1,7 @@
 <div class="right-body">
   <div class="container">
     <% @draft_bookings.each do |booking| %>
-        <div class="col-xs-10 panel panel-default">
+        <div class="col-xs-10 panel panel-default" id="booking_<%=booking.id%>">
           <div class="col-xs-3">
             <% if booking.seller  %>
                 <%= image_tag(booking.seller.avatar_url, height: 100, width: 100) if booking.seller.avatar? %>
@@ -26,7 +26,7 @@
               <%= link_to "RESUME BOOKING", get_quote_booking_path(booking), {class: 'btn btn-success'} %>
             </div>
             <div style="margin: 10px 0px">
-              <%= link_to "DELETE BOOKING", booking_path(booking), {method: :delete, class: 'btn btn-danger'} %>
+              <%= link_to "DELETE BOOKING", booking_path(booking), {method: :delete, data: {confirm: "Are you sure?"}, :remote=>true, class: 'btn btn-danger'} %>
             </div>
           </div>
         </div>
