--- a/app/views/layouts/_buyer_side_bar.html.erb
+++ b/app/views/layouts/_buyer_side_bar.html.erb
@@ -16,8 +16,9 @@
          <a href="/deleteUserAccount">Delete Account</a>
        </li>
       </ul>
-      <a class="list-group-item" href="#">Active Booking</a>
-      <a class="list-group-item" href="#">Booking on Hold</a>
+      <a class="list-group-item active" href="#">New Booking</a>
+      <%= link_to "Active Booking", active_bookings_bookings_path, {class: "list-group-item"} %>
+      <%= link_to "Booking On Hold", bookings_on_hold_bookings_path, {class: "list-group-item"} %>
       <%= link_to "Draft Booking", draft_bookings_bookings_path, {class: "list-group-item"} %>
       <%= link_to "Archived Bookings", archived_bookings_bookings_path, {class: "list-group-item"} %>
     </div>
