--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -44,8 +44,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 
 .container {width: 1170px !important;}
 .right-body {padding-top: 20px;}
-.page-overlay {background: rgba(0,0,0,0.7);position: fixed;left: 0;top: 0;width: 100%;height: 100%;z-index: 1100;display: none;}
-
+.page-overlay {background: #000;position: fixed;left: 0;top: 0;width: 100%;height: 100%;z-index: 1100;display: none;opacity: 0.5;filter(alpha=50);-ms-filter(alpha=50);transition:all 1s ease-in-out;-webkit-transition:all 1s ease-in-out;-moz-transition:all 1s ease-in-out;Z}
 .btn-ghost {border:1px solid;background: transparent;}
 .btn-ghost:hover {background: #fff;background: rgba(255,255,255,0.7);}
 .ghost-white {color: #fff;}
@@ -123,7 +122,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .frmto-menu {background:transparent;color: #fff;padding: 0 !important;min-width: 220px;}
 .frmto-menu>.loc-item {display: block;width: 100%;background: #fff !important;height: 36px;border-bottom: 1px solid #ddd}
 .frmto-menu>.loc-item>.loc-item-in:hover {background: #d8f2fe}
-.frmto-menu>.loc-item a:hover {background: transparent;color: #000}
+.frmto-menu>.loc-item a:hover,.frmto-menu>.loc-item a:focus,.frmto-menu>.loc-item a:active {background: transparent;color: #000}
 
 .loc-item>.loc-item-in {display: block;width: 100%;position: relative;padding: 0;height: inherit;}
 .loc-item-in>.loc-item-link {left: 0;top: 0;position: absolute;padding: 0;width: 195px;height: inherit;padding: 5px;}
@@ -142,14 +141,14 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 
 
 .rlist-wrapper {margin-bottom: 30px;}
-.rlist-headings {width: 100%;padding: 10px;margin: 0 0 15px;overflow: hidden;background: #CCD1D9;list-style-type: none;border:1px solid #c6c6c6;}
+.rlist-headings {width: 100%;padding: 10px;margin: 0 0 15px;overflow: hidden;background: #CCD1D9;list-style-type: none;border-bottom:1px solid #c6c6c6;}
 .rlist-headings>li {width: auto;display: inline-block;float: left;color: #000;padding: 0 5px;text-align: center;}
 .rlist-headings>li+li {border-left: 1px solid #AAB2BD;}
-.result-item {width: 100%;margin: 0;padding:6px 10px;display: table;overflow: hidden;list-style-type: none;border:1px solid #c6c6c6;background: #fff;margin: 5px 0;box-shadow:0 1px 2px rgba(0,0,0,.2);-webkit-box-shadow:0 1px 2px rgba(0,0,0,.2);-moz-box-shadow:0 1px 2px rgba(0,0,0,.2);}
+.result-item {width: 100%;margin: 0;padding:6px 10px;display: table;overflow: hidden;list-style-type: none;background: #fff;margin: 5px 0;box-shadow:0 1px 2px rgba(0,0,0,.2);-webkit-box-shadow:0 1px 2px rgba(0,0,0,.2);-moz-box-shadow:0 1px 2px rgba(0,0,0,.2);}
 .result-item>.rb-item {display: table-cell;width: auto;padding: 0 5px;vertical-align: middle;}
 
 .rb-item + .rb-item {border-left: 1px solid #eee}
-.result-content {margin-bottom: 50px;margin-top: 25px;}
+.result-content {margin-bottom: 30px;margin-top: 25px;}
 .rlist-headings>li:nth-child(1),.result-item>.rb-name {width:18%;}
 .rlist-headings>li:nth-child(2),.result-item>.rb-rating {width:16%}
 .rlist-headings>li:nth-child(3),.result-item>.rb-coff {width:14%}
@@ -221,6 +220,7 @@ span.block,.show {display: block;}
 
 
 /************** =Global ****************/
+.white-back {background-color: #fff}
 a,.blue-text {color: #19B5FE}
 .lblue {color: #d8f2fe}
 
