--- a/app/views/freights/guest_user_sign_up.html.erb
+++ b/app/views/freights/guest_user_sign_up.html.erb
@@ -2,7 +2,7 @@
   <div class="col-xs-12">
     <h1 class="page-title text-center">Your Frieght rates are ready!</h1>
     <p class="text-left">
-      Complete your contact details below to have the best rates from <span>14</span> selected freight forwarders displayed - with price guarantee!
+      Complete your contact details below to have the best rates from our selected freight forwarders displayed - with price guarantee!
     </p>
     <p class="text-left">
       Your contact details will only be used to secure your price guarantee.
@@ -28,7 +28,14 @@
             <%= f.email_field :email,{class: 'form-control', placeholder: "Email", required: :required}%>
           </div>
           <div class="form-group">
-            <%= f.text_field :phone_number,{class: 'form-control', placeholder: "Phone Number",required: :required}%>
+            <div class="row">
+              <div class="col-xs-4">
+                <%=f.select :calling_code, GlobalConstants::CALLING_CODES.map { |c| [ '+'+c.to_s, c ] },{},{class: 'form-control selecter'} %>
+              </div>
+              <div class="col-xs-8">
+                <%= f.text_field :phone_number,{class: 'form-control', placeholder: "Phone Number",required: :required, maxlength: "10"}%>
+              </div>
+            </div>
           </div>
           <div class="form-group text-center">
             <%= f.submit "SEE PRICES NOW!", {class: 'btn btn-primary btn-block'}%>
