added check for cart session

--- a/app/views/bookings/booking_summary.html.erb
+++ b/app/views/bookings/booking_summary.html.erb
@@ -47,7 +47,7 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="form-group text-right">
-      <%= link_to get_quote_booking_path(id:session[:bookind_ids].first), class: 'btn btn-inverse' do %>
+      <%= link_to get_quote_booking_path(id:session[:booking_ids].first), class: 'btn btn-inverse' do %>
         <i class="fa fa-angle-double-left"></i>
         Go Back
       <%end%>
