--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -144,8 +144,10 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .rlist-headings {width: 100%;padding: 10px;margin: 0 0 15px;overflow: hidden;background: #CCD1D9;list-style-type: none;border-bottom:1px solid #c6c6c6;}
 .rlist-headings>li {width: auto;display: inline-block;float: left;color: #000;padding: 0 5px;text-align: center;}
 .rlist-headings>li+li {border-left: 1px solid #AAB2BD;}
-.result-item {width: 100%;margin: 0;padding:6px 10px;display: table;overflow: hidden;list-style-type: none;background: #fff;margin: 5px 0;box-shadow:0 1px 2px rgba(0,0,0,.2);-webkit-box-shadow:0 1px 2px rgba(0,0,0,.2);-moz-box-shadow:0 1px 2px rgba(0,0,0,.2);}
+.result-item {width: 100%;margin: 0;padding:6px 10px;display: table;overflow: hidden;background: #fff;margin: 5px 0;box-shadow:0 1px 2px rgba(0,0,0,.2);-webkit-box-shadow:0 1px 2px rgba(0,0,0,.2);-moz-box-shadow:0 1px 2px rgba(0,0,0,.2);}
+.result-item:hover {background: #efefef;}
 .result-item>.rb-item {display: table-cell;width: auto;padding: 0 5px;vertical-align: middle;}
+.result-item [data-toggle="collapse"] {cursor: pointer;}
 
 .rb-item + .rb-item {border-left: 1px solid #eee}
 .result-content {margin-bottom: 30px;margin-top: 25px;}
@@ -156,6 +158,28 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .rlist-headings>li:nth-child(5),.result-item>.rb-day {width:10%}
 .rlist-headings>li:nth-child(6),.result-item>.rb-aip {width:14%}
 .rlist-headings>li:nth-child(7),.result-item>.rb-buk {width:14%}
+
+.r-collapsed-info {background: #fff;border-radius: 3px;overflow: hidden;border:1px solid #eee;}
+.r-collapsed-inner {padding:15px 15px 20px;display: inline-block;width: 100%;}
+
+.brand-info {border-bottom: 1px solid #d7d7d7;margin-bottom: 15px;}
+.rsplr-name {font-family: 'open_sansbold';font-weight: normal;margin: 0;margin-bottom: 10px;}
+.star-grph {position: relative;width: 310px;display: block;list-style-type: none;margin: 0;padding: 0;height: 25px;}
+.rtp-title {margin-bottom: 5px;display: inline-block;}
+.star-grph>li {position: absolute;}
+.star-grph .star-srl {width: 50px;left: 0}
+.star-grph .star-lvl {left: 50px;width: 180px;}
+.star-lvl .progress {border-radius: 0;}
+.star-grph .star-src {width:50px;left: 240px;}
+
+.listed-revws {display: block;margin: 0;padding: 0;width: 100%;height: 284px;overflow-y:auto }
+.listed-revws .each-rvw {display: block;width: 100%;margin: 0;padding:5px;}
+.each-rvw:nth-child(odd) {background: #eee}
+.each-rvw .rv-pts {color: #000;}
+.each-rvw .rv-pts:after {content: ' : ';}
+.each-rvw .rv-text {font-family: 'open_sanslight';}
+.each-rvw .rv-date {font-family: 'open_sanslight';color: #ccc;font-size: 12px;}
+.each-rvw .rv-date:before {content: " - "}
 
 .result-item>.rb-buk>.btn {width: 100%;}
 .result-item>.rb-name img {width: auto;max-width: 100%;height: auto;max-height: 43px;display: block;margin-left: auto;margin-right: auto;}
@@ -201,7 +225,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .btn {border-radius: 2px;-webkit-border-radius: 2px;-moz-border-radius: 2px;}
 
 .form-control {border-color: #96deff;height: 32px;border-radius: 2px;}
-.input-group-addon {border-radius: 0}
+.input-group-addon {background-color:#96deff;border-color: #96deff;border-radius: 0}
 
 label {font-weight: normal;}
 
@@ -241,7 +265,8 @@ a,.blue-text {color: #19B5FE}
 .v-middle {vertical-align: middle;}
 .v-bottom {vertical-align: bottom;}
 
-h1,h2,h3,h4,h5,h6,strong,b {font-weight: normal;}
+h1,h2,h3,h4,h5,h6 {font-weight: normal;}
+strong, b {font-weight: normal;font-family: 'open_sansbold',Helvetica,Arial,Sans-serif;}
 
 .no-overflow {overflow: hidden;}
 
