--- a/app/views/bookings/draft_bookings.html.erb
+++ b/app/views/bookings/draft_bookings.html.erb
@@ -3,7 +3,7 @@
     <% @draft_bookings.each do |booking| %>
         <div class="col-xs-10 panel panel-default">
           <div class="col-xs-3">
-            <% if booking.seller_id  %>
+            <% if booking.seller  %>
                 <%= image_tag(booking.seller.avatar_url, height: 100, width: 100) if booking.seller.avatar? %>
             <% else %>
                 <p>To be decided</p>
