--- a/app/views/bookings/seller_confirmation_order.html.erb
+++ b/app/views/bookings/seller_confirmation_order.html.erb
@@ -28,7 +28,7 @@
                       <tbody>
                       <% @seller_bookings.each  do |booking| %>
                           <tr>
-                            <%status_for_order =  booking.aasm_state =="pending" ? "Pending Confirmation": booking.aasm_state%>
+                            <%status_for_order =  booking.aasm_state =="active" ? "Pending Confirmation": 'Awaiting buyers response'%>
                             <td> <%=booking.source  %></td>
                             <td> <%=booking.destination  %></td>
                             <td> <%=booking.pick_up_date %></td>
@@ -66,8 +66,7 @@
         <%=hidden_field_tag 'id', nil ,:id => 'booking_hidden_field_id'%>
         <%= text_area_tag 'remark', nil, :size=> '75x5', :class=>'remark' %>
       </div>
-      <div class="modal-footer">
-        <%= button_tag ("Just For Buyers Flow"),:class=>"btn btn-default col-xs-6",:data=>{'dismiss'=>"modal"} %>        
+      <div class="modal-footer">       
         <%= button_tag ("Submit"),:id=>"reject_submit",:class=>"btn btn-primary",:onclick=>"save_remarks()"%>
       </div>
     </div>
